site intenational and site vietnamese

--- a/src/templates/client/en/base.html
+++ b/src/templates/client/en/base.html
@@ -10,7 +10,6 @@
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
     {% block head %}
     {% endblock %}
     </head>
@@ -36,12 +35,12 @@
 
     <!-- Header -->
     {% block header %}
-    {% include 'header.html' %}
+    {% include 'client/en/header.html' %}
     {% endblock %}
 
     <!-- Navigation -->
     {% block navigation %}
-    {% include 'navigation.html' %}
+    {% include 'client/en/navigation.html' %}
     {% endblock %}
 
     <!-- Main Content -->
@@ -50,7 +49,7 @@
 
     <!-- Footer -->
     {% block footer %}
-    {% include 'footer.html' %}
+    {% include 'client/en/footer.html' %}
     {% endblock %}
 
     <!-- Scroll to Top -->
