--- a/src/templates/client/vn/index.html
+++ b/src/templates/client/vn/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'client/vn/base.html' %}
 {% block title %}VnNews - Trang Tin Tức Hàng Đầu{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
