--- a/src/templates/client/en/index.html
+++ b/src/templates/client/en/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'client/en/base.html' %}
 {% block title %}VnNews International - Latest World News{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
