update international news site

--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -712,6 +712,11 @@
             </div>
         </div>
     </div>
+
+    <div class="content-section" id="en-menu-manager">
+        {% include 'admin/en-menu-manager.html' %}
+    </div>
+
 {% endblock %}
 {% block scripts_url %}
     <!-- jQuery -->
