--- a/src/templates/client/vn/base.html
+++ b/src/templates/client/vn/base.html
@@ -13,7 +13,7 @@
     {% block head %}
     {% endblock %}
     </head>
-<body onload="onload()">
+<body>
     <!-- Top Bar -->
     <div class="top-bar">
         <div class="container">
