--- a/src/templates/admin/dashboard.html
+++ b/src/templates/admin/dashboard.html
@@ -27,7 +27,7 @@
             <li>
                 <a href="#" data-section="pending">
                     <i class="fas fa-clock"></i> Bài chờ duyệt
-                    <span class="badge bg-warning" id="pendingCount">0</span>
+                    <span class="badge bg-warning" id="pendingCount">{{ stat_pending }}</span>
                 </a>
             </li>
             <li>
