--- a/src/templates/editor/international-section.html
+++ b/src/templates/editor/international-section.html
@@ -9,11 +9,11 @@
                     <table class="table table-hover">
                         <thead>
                             <tr>
-                                <th width="5%">#</th>
+                                <!-- <th width="5%">#</th> -->
                                 <th width="35%">Title</th>
                                 <th width="12%">Category</th>
-                                <th width="10%">Status</th>
-                                <th width="10%">Visible</th>
+                                <th width="15%">Status</th>
+                                <!-- <th width="10%">Visible</th> -->
                                 <th width="13%">Created</th>
                                 <th width="15%">Actions</th>
                             </tr>
