update handle hastag

--- a/src/templates/editor/editor-dashboard.html
+++ b/src/templates/editor/editor-dashboard.html
@@ -237,6 +237,9 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                    <button type="button" class="btn btn-outline-primary" id="submitEditBtn">
+                        <i class="fas fa-paper-plane"></i> Gửi duyệt
+                    </button>
                     <button type="button" class="btn btn-primary" id="saveEditBtn">
                         <i class="fas fa-save"></i> Lưu thay đổi
                     </button>
