--- a/src/templates/client/en/news_detail.html
+++ b/src/templates/client/en/news_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends '/client/vn/base.html' %}
 {% block title %}{{ category.name }} - VnNews{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
@@ -185,7 +185,7 @@
 {% endblock %}
 
 {% block scripts %}
-{% include 'hot_news.html' %}
+{% include 'client/en/hot_news.html' %}
 <script>
     // Handle Save/Unsave News
     const saveNewsBtn = document.getElementById('saveNewsBtn');
