--- a/src/templates/client/en/search.html
+++ b/src/templates/client/en/search.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends '/client/vn/base.html' %}
 {% block title %}Tìm kiếm - VnNews{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
@@ -143,6 +143,6 @@
     </main>
 {% endblock %}
 {% block scripts %}
-{% include 'hot_news.html' %}
+{% include 'client/en/hot_news.html' %}
 {% endblock %}
 
