--- a/src/templates/client/profile.html
+++ b/src/templates/client/profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends '/client/vn/base.html' %}
 {% block title %}Thông tin cá nhân - VnNews{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
