--- a/src/templates/client/vn/category.html
+++ b/src/templates/client/vn/category.html
@@ -1,4 +1,4 @@
-{% extends '/client/vn/base.html' %}
+{% extends 'client/vn/base.html' %}
 {% block title %}{{ category.name }} - VnNews{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
